[workspace]
resolver = "2"

members = [
  "01/d01-1",
  "01/d01-2",
  "02/d02-1",
  "02/d02-2",
  "03/d03-1",
  "03/d03-2",
  "04/d04-1",
  "04/d04-2",
  "05/d05-1",
  "05/d05-2",
  "06/d06-1",
  "06/d06-2",
  "07/d07-1",
  "07/d07-2",
  "08/d08-1",
  "08/d08-2",
  "09/d09-1",
  "09/d09-2",
  "10/d10-1",
  "10/d10-2",
  "11/d11-1",
  "11/d11-2",
  "12/d12-1",
  "12/d12-2",
  "13/d13-1",
  "13/d13-2",
  "14/d14-1",
  "14/d14-2",
  "15/d15-1",
  "15/d15-2",
  "16/d16-1",
  "16/d16-2",
  "17/d17-1",
  "17/d17-2",
  "18/d18-1"
]
